# Muskat

./: README.md
Client/src/: client.cpp  client.html  client.html~
Client/www/: index.html
Client/www/css/: style.css
Client/www/js/app/: app.js  deamon.js  vec.js
Project3/: Basket.json  Teapot.json  index.html  stopbus.json  tisch.json  trash.json
Project3/fw190/: FW190.json
Project3/scripts/: .main.js.swp  JSONModel.js  VEC2.js  VEC3.js  boxvertex.glsl  config.js  fragment.glsl  init.js  main.js  vertex.glsl
ResultBuilder/: main.cpp  run.sh
SSIM/: SSIM  SSIM.cpp  run.sh
Server/: deamon.cpp  deamon.h  fshader.glsl  glwidget.cpp  glwidget.h  jsonrpc.cpp  jsonrpc.h  main.cpp  mainwindow.cpp  mainwindow.h  muskat.h  muskat.pro  muskat.qrc  scene.cpp  scene.h  server  server.cpp  server.cpp~  server2.cpp  shaders.qrc
Server/chapter-4/: .main.cpp.swp  .utils.h.swp  test  utils.cpp
Server/jrtplib-3.9.1/: CMakeCache.txt  Makefile  cmake_install.cmake
Server/jrtplib-3.9.1/examples/: Makefile  cmake_install.cmake  example1  example2  example3  example4  example5
Server/jrtplib-3.9.1/src/: Makefile  cmake_install.cmake  libjrtp.so.3.9.1
Server/renderer/: CMakeLists.txt  deamon.cpp  deamon.h  fragment.glsl  main.cpp  muskat.cpp  muskat.h  run.sh  scene.cpp  scene.h  si.cpp  si.h  utils.cpp  utils.h  vertex.glsl
Tex/: cgvpub.cls  diplominf.tex  div.csv  div_data_2_512x512D8L1.0I0.0.csv  div_data_2_512x512D8L1.0I0.5.csv  div_data_2_512x512D8L1.0I1.0.csv  div_data_4_512x512D10L0.0I0.0A0.0J0.0pre.csv  div_data_mean_2_512x512D8L1.0I0.0.csv  div_data_mean_2_512x512D8L1.0I0.5.csv  div_data_mean_2_512x512D8L1.0I1.0.csv  div_data_mean_4_512x512D10L0.0I0.0A0.0J0.0pre.csv  div_duration_info_2_512x512D8L1.0I0.0.csv  div_duration_info_2_512x512D8L1.0I0.5.csv  div_duration_info_2_512x512D8L1.0I1.0.csv  div_duration_info_4_512x512D10L0.0I0.0A0.0J0.0pre.csv  div_mesh_infos_2_512x512D8L1.0I0.0.csv  div_mesh_infos_2_512x512D8L1.0I0.5.csv  div_mesh_infos_2_512x512D8L1.0I1.0.csv  div_mesh_infos_4_512x512D10L0.0I0.0A0.0J0.0pre.csv  literatur.bib  run.sh
Tex/diplomarbeit/: diplominf.aux  diplominf.bbl  diplominf.blg  diplominf.out  diplominf.tex  diplominf.toc  literatur.bib  run.sh
Tex/vorlage&beispiele/: bachelor.tex  diplominf.aux  diplominf.bbl  diplominf.blg  diplominf.out  diplominf.tex  diplominf.toc  diplomist.tex  diplommedieninf.tex  grosserbeleg.tex  hauptseminar.tex  master.tex  proseminar.tex
Vortrag/: Verteidigung.tex  run.sh
simple/Client/: .index.html.swp  gl.html  index.html
simple/Client/css/: style.css
simple/Client/js/app/: app.js  config.js  gl.js  mesh.js  muskatConfig.js  muskatEvaluator.js  muskatGl.js  muskatMesh.js
simple/Client/js/lib/: FirstPersonControls.js
simple/Server/: .jsonrpc.h.swp  Makefile  abstractRenderer.h  compressor.cpp  compressor.h  config.cpp  config.h  deamon.cpp  deamon.h  evaluator.cpp  evaluator.h  fileRenderer.cpp  fileRenderer.h  jsonrpc.cpp  jsonrpc.h  main.cpp  mainwindow.cpp  mainwindow.h  muskat.cpp  muskat.h  playlist.cpp  playlist.h  quadtree.cpp  quadtree.h  scene.cpp  scene.h  server  server.pro  server.qrc
simple/Server/res/: test.sh  test.tex
